Update native hook